	  have been obsoleted
	- updated rpmdepUpgradePackage() to deal with obsoletes tag
	- convertdb needed to read rpmrc
	- fixed ugly bug in package ordering
	- archivesize tag was incorrect for packages with hard links
	- moved popt into a separate library
	- directory created with %doc is now name-version (dropped
          the release)
	- added buildarch/buildos macros

2.4.6 -> 2.4.7:
	- had some wrong month lengths in changelog date parsing
	- updated fine-requires (Linux version) to add lines for shell
	  scripts (Donnie Barnes)
	- didn't package / properly
	- pre/post script processing had some erroneous free() calls
	- fixed typos for HP archs in lib/rpmrc.c
	- uname() results should go through *_canon tables before anything
	  else happens
	- set -x in debug shells, not -xs

2.4.5 -> 2.4.6:
	- added os_canon entries for BSD/OS and NextStep
	- replaced include of <malloc.h> with includes of <stdlib.h>
	- fixed md5sum of source packages w/ a buildroot is used
	- fixed bugs installing version 1 packages
	- remove hyphens from uname() result (specifically for HP-UX)
	- hacks to recognize architecture under parisc
	- RPM_INSTALL_PREFIX wasn't being set properly (this should be
	  fixed now)
	- replaced temporary file creation to be race-condition safe
	- prerequisites may not specify versions

2.4.4 -> 2.4.5:
	- call getpwnam()/endpwent() once before a chroot(), forcing name 
	  service shared libs to be loaded from outside of the root path
	- added vesrion stamp to lib/misc.o (and librpm.a by extension)
	- fixed config.sub, config.guess to recognize i686
	- ARCHIVESIZE tag didn't get filled in properly, breaking progress
	  meters

2.4.3 -> 2.4.4:
	- restore working directory after installing a package w/ a chroot
	- dump the package stack when a dependency loop is encountered
	- when a user/group lookup fails, end*ent() and retry 
	- fixed broken --scripts argument (it was --s2)
	- only display the packager and url in -qi output if they have defined
	  values